# retro-rag

./: README.md  docker-compose.yml
gpu-service/: Dockerfile  README.md  pyproject.toml
gpu-service/src/: app.py
gpu-service/src/routes/: detect_hallucination.py  rerank.py  summarize.py
gpu-service/src/services/: crossencoder.py  hallucination.py
gpu-service/src/utils/: logger.py
gpu-service/tests/: conftest.py  test_detect_hallucination.py  test_rerank.py  test_summarize.py
lab/: .gitignore  README.md  graph_expansion.ipynb  ingest_articles.ipynb  pyproject.toml
lab/baml_src/: ask.baml  clients.baml  extractEntities.baml  extractTriplets.baml  queryExpansion.baml
lab/notebooks/: conditionnal_extractive_summarization.ipynb
lab/notebooks/01_ingestion/: 01_extract_metadata.ipynb  02_ingest_articles.ipynb  03_ingest_triples.ipynb
lab/notebooks/02_synthetic_data/: 01_create_qa_testset.ipynb  02_create_ir_testset.ipynb  03_create_ir_testset_multichunks.ipynb  questions.yml
lab/notebooks/03_experiments/: end2end_experiments.ipynb  retrieval_experiments.ipynb  snyc_ge_experiments.ipynb
lab/src/: embeddings.py  entity.py  search.py  sync_ge.py  utils.py
lab/src/baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
rag-backend/: .gitignore  Dockerfile  README.md  pyproject.toml
rag-backend/baml_src/: ask.baml  clients.baml  extractArticleMetadata.baml  extractEntities.baml  generators.baml  queryExpansion.baml
rag-backend/docs/: conf.py  endpoints.rst  index.rst  modules.rst
rag-backend/src/: __init__.py  app.py
rag-backend/src/models/: __init__.py  document.py  requests.py  responses.py
rag-backend/src/routes/: __init__.py  ask.py  (+1 more)
rag-backend/tests/: conftest.py  test_models.py
(+45 files in other folders)
