[project]
name = "gpu-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask[async]>=3.1.1",
    "flask-cors>=5.0.1",
    "hdm2[gpu]>=0.7.0",
    "hf-xet>=1.1.1",
    "numpy>=2.2.5",
    "sentence-splitter>=1.4",
    "sentence-transformers>=4.1.0",
    "pytest>=8.3.5",
    "flasgger>=0.9.7.1",
    "gunicorn>=23.0.0",
]
