[project]
name = "tmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "baml-py>=0.87.2",
    "duckdb>=1.2.2",
    "evaluate>=0.4.3",
    "fastembed>=0.6.1",
    "google-genai>=1.14.0",
    "jupyter>=1.1.1",
    "mlflow>=2.22.0",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "sentence-splitter>=1.4",
    "sentence-transformers>=4.1.0",
    "textstat>=0.7.7",
    "tiktoken>=0.9.0",
]
